Add auto update for service changes

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@tailwindcss/forms": "^0.3.4",
+    "events": "^3.3.0",
     "moment": "^2.29.1",
     "next": "11.1.2",
     "ping": "^0.4.1",
