--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p 80",
+    "start": "npx prisma db push && next start -p 80",
     "lint": "next lint"
   },
   "repository": {
@@ -18,23 +18,31 @@
   "devDependencies": {
     "@headlessui/react": "^1.4.1",
     "@tailwindcss/forms": "^0.3.4",
-    "events": "^3.3.0",
-    "moment": "^2.29.1",
-    "next": "12.0.4",
-    "ping": "^0.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-iframe": "^1.8.0",
-    "react-time": "^4.3.0",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.41",
     "autoprefixer": "10.4.0",
     "classnames": "2.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "events": "^3.3.0",
+    "moment": "^2.29.1",
+    "next": "12.0.4",
+    "ping": "^0.4.1",
     "postcss": "8.4.8",
     "postcss-100vh-fix": "1.0.2",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-hover-media-feature": "1.0.1",
     "postcss-preset-env": "7.0.1",
-    "tailwindcss": "2.2.19"
+    "prisma": "^3.11.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-iframe": "^1.8.0",
+    "react-time": "^4.3.0",
+    "tailwindcss": "2.2.19",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@prisma/client": "3.11.0"
   }
 }
