--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "react-time": "4.3.0",
     "tailwindcss": "2.2.19",
     "ts-node": "10.7.0",
-    "typescript": "4.6.2"
-  },
-  "dependencies": {
+    "typescript": "4.6.2",
     "@prisma/client": "3.11.0"
   }
 }
