--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "devDependencies": {
     "@headlessui/react": "1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@prisma/client": "3.11.0",
     "@tailwindcss/forms": "0.5.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.41",
@@ -41,6 +43,6 @@
     "tailwindcss": "3.0.23",
     "ts-node": "10.7.0",
     "typescript": "4.6.2",
-    "@prisma/client": "3.11.0"
+    "weather-js": "^2.0.0"
   }
 }
