--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   cloudboard:
     image: cloudboard
+    platform: linux/amd64
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -12,5 +13,6 @@ services:
 
   postgres:
     image: postgres:latest
+    platform: linux/amd64
     ports:
       - "5432:5432"
