--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-iframe": "1.8.0",
+    "react-sortable-hoc": "^2.0.0",
     "react-time": "4.3.0",
     "tailwindcss": "3.0.23",
     "ts-node": "10.7.0",
