--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,12 @@
 version: '3.3'
 services:
   cloudboard:
-    image: cloudboard
+    image: cloudboard-dev
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
       - ./:/app
-    entrypoint: yarn dev
     working_dir: /app
