--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "yarn install && npx prisma db push && next",
     "build": "next build",
-    "start": "npx prisma db push && next start -p 80",
+    "start": "next start",
     "lint": "next lint"
   },
   "repository": {
@@ -15,10 +15,12 @@
   },
   "author": "Tim Ritter",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
+    "next": "12.1.4",
+    "prisma": "3.12.0",
+    "@prisma/client": "3.12.0",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "^1.0.6",
-    "@prisma/client": "3.12.0",
     "@tailwindcss/forms": "0.5.0",
     "@types/node": "17.0.21",
     "@types/react": "18.0.0",
@@ -28,14 +30,12 @@
     "eslint-config-next": "12.1.4",
     "events": "3.3.0",
     "moment": "2.29.2",
-    "next": "12.1.4",
     "ping": "0.4.1",
     "postcss": "8.4.12",
     "postcss-100vh-fix": "1.0.2",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-hover-media-feature": "1.0.2",
     "postcss-preset-env": "7.0.1",
-    "prisma": "3.12.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-iframe": "1.8.0",
