Use correct dockerfile in actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
+          file: Dockerfile.prod
           push: true
           tags: coyann/cloudboard:latest
