--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -4,14 +4,14 @@ FROM node:16-alpine AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile --force
+RUN yarn install --frozen-lockfile
 
 # Rebuild the source code only when needed
 FROM node:16-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN touch /app/prisma/app.db
+RUN rm /app/prisma/app.db & touch /app/prisma/app.db
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
@@ -24,22 +24,10 @@ WORKDIR /app
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
 
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
+COPY --from=builder /app/ ./
 
-COPY --from=builder /app/next.config.js ./
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/prisma ./prisma
-
-# I don't like doing it either but some dependencies don't get updates that often
 RUN npm config set legacy-peer-deps true
-
 RUN npx prisma db push
-
-COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
-
-USER nextjs
 
 EXPOSE 3000
 
